--- a/index.html
+++ b/index.html
@@ -83,31 +83,28 @@
 </nav>
 
 <!-- HOME -->
-<!-- HOME -->
 <section id="home">
   <div style="display:flex;align-items:center;gap:40px;flex-wrap:wrap;">
     <img src="keerthana1.jpg" alt="Profile Photo" style="width:220px;height:220px;border-radius:50%;object-fit:cover;box-shadow:0 6px 20px rgba(0,0,0,0.2);" />
-
     <div>
       <h1>Hello, I'm N Keerthana</h1>
       <p>Computer Science Student | Skilled Coder with Strong Work Ethic, Dedication & Sharp Thinking.</p>
-
-      <!-- RESUME BUTTON (fixed position) -->
-      <a href="krtnResume.pdf" download style="
-        display:inline-block;
-        margin-top:20px;
-        padding:12px 22px;
-        background:#0f766e;
-        color:white;
-        border-radius:8px;
-        text-decoration:none;
-        font-weight:600;
-        box-shadow:0 4px 12px rgba(0,0,0,0.15);
-        transition:0.3s;">
-        📄 Download Resume (PDF)
-      </a>
     </div>
-  </div>
+
+    <!-- RESUME BUTTON -->
+    <a href="krtnResume.pdf" download style="
+      display:inline-block;
+      margin-top:20px;
+      padding:12px 22px;
+      background:#0f766e;
+      color:white;
+      border-radius:8px;
+      text-decoration:none;
+      font-weight:600;
+      box-shadow:0 4px 12px rgba(0,0,0,0.15);
+      transition:0.3s;">
+      📄 Download Resume (PDF)
+    </a>
 </section>
 
 <!-- ABOUT -->
@@ -334,4 +331,4 @@
 </script>
 
 </body>
-</html>
+</html> (not taking to the email)
