--- a/index.html
+++ b/index.html
@@ -64,23 +64,88 @@
   .edu-card .inst { color:#64748b; font-style:italic; }
 
   /* CONTACT */
-  #contact .info { margin-bottom:10px; font-size:1.1rem; }
-</style>
-</head>
-<body>
+  <!-- CONTACT -->
+<section id="contact">
+  <h2>Contact</h2>
 
-<nav>
-  <div class="logo">N Keerthana</div>
-  <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#education">Education</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="https://github.com/keerthana-nandeesh" target="_blank">GitHub</a></li>
-  </ul>
-</nav>
+  <div style="display:flex;flex-wrap:wrap;gap:30px;align-items:flex-start;margin-top:20px;max-width:900px;">
+
+    <!-- LEFT SIDE -->
+    <div style="flex:1;min-width:260px;display:flex;flex-direction:column;gap:16px;">
+
+      <!-- EMAIL CARD -->
+      <a href="mailto:krtn.58@gmail.com" target="_blank" style="text-decoration:none;color:inherit;">
+        <div style="background:white;padding:18px;border-radius:14px;
+        box-shadow:0 6px 20px rgba(0,0,0,0.06);display:flex;
+        align-items:center;gap:12px;cursor:pointer;">
+          <span style="font-size:1.6rem;">📩</span>
+          <div>
+            <div style="font-weight:600;">Email</div>
+            <div style="color:#475569;">krtn.58@gmail.com</div>
+          </div>
+        </div>
+      </a>
+
+      <!-- LINKEDIN CARD -->
+      <a href="https://www.linkedin.com/in/keerthana-nandeesh" target="_blank" style="text-decoration:none;color:inherit;">
+        <div style="background:white;padding:18px;border-radius:14px;
+        box-shadow:0 6px 20px rgba(0,0,0,0.06);display:flex;
+        align-items:center;gap:12px;cursor:pointer;">
+          <span style="font-size:1.6rem;">🔗</span>
+          <div>
+            <div style="font-weight:600;">LinkedIn</div>
+            <div style="color:#475569;">linkedin.com/in/keerthana-nandeesh</div>
+          </div>
+        </div>
+      </a>
+
+      <!-- GITHUB CARD (ADDED) -->
+      <a href="https://github.com/keerthana-nandeesh" target="_blank" style="text-decoration:none;color:inherit;">
+        <div style="background:white;padding:18px;border-radius:14px;
+        box-shadow:0 6px 20px rgba(0,0,0,0.06);display:flex;
+        align-items:center;gap:12px;cursor:pointer;">
+          <span style="font-size:1.6rem;">🐙</span>
+          <div>
+            <div style="font-weight:600;">GitHub</div>
+            <div style="color:#475569;">github.com/keerthana-nandeesh</div>
+          </div>
+        </div>
+      </a>
+
+      <!-- LOCATION CARD -->
+      <div style="background:white;padding:18px;border-radius:14px;
+      box-shadow:0 6px 20px rgba(0,0,0,0.06);display:flex;
+      align-items:center;gap:12px;">
+        <span style="font-size:1.6rem;">📍</span>
+        <div>
+          <div style="font-weight:600;">Location</div>
+          <div style="color:#475569;">Hassan, Karnataka</div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- RIGHT SIDE BOX -->
+    <div style="flex:1;min-width:280px;">
+      <div style="background:white;padding:24px;border-radius:16px;
+      box-shadow:0 6px 20px rgba(0,0,0,0.06);">
+        <h3 style="margin-bottom:10px;color:#0f766e;">Let’s Connect!</h3>
+        <p style="color:#475569;margin-bottom:15px;">
+          I’m always open to discussing projects, ideas, collaborations, or anything tech-related.
+          Feel free to reach out using the links on the left.
+        </p>
+
+        <div style="margin-top:20px;font-size:0.95rem;color:#64748b;">
+          Prefer email? Click the email card to open your mail app instantly.<br>
+          Want to explore my code? Visit my GitHub.<br>
+          Want to connect professionally? Check my LinkedIn.
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 <!-- HOME -->
 <section id="home">
@@ -332,3 +397,4 @@
 
 </body>
 </html> (not taking to the email)
+
